--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "author": "James Oliveira da Silva <jamesodas@gmail.com>",
   "license": "MIT",
-  "main": "main.js",
+  "main": "dist/bundle.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha tests/**/*.js --require babel-register",
     "test:tdd": "./node_modules/.bin/mocha tests/**/*.spec.js --require babel-register --watch",
